JS-448 update BureauJwtPayload